crates/math-core/tests/snapshots/error_test__size_command_in_math_mode.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\large x"
---
Error: Not valid in math mode.
   ╭─[ <input>:1:1 ]
   │
 1 │ \large x
   │ ───┬──  
   │    ╰──── this is not valid in math mode
───╯
